--- a/index.html
+++ b/index.html
@@ -7,15 +7,17 @@
   <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-
+  <link rel="stylesheet" href="styles.css">
   <title>Frontend Mentor | QR code component</title>
 </head>
 
 <body>
-  <div class="container">
+  <div class="qr-container">
     <img src="./images/image-qr-code.png" alt="qr code" class="qr-code">
-    <span class="title">Improve your front-end skills by building projects</span>
-    <span class="copy">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
+    <div class="qr-text">
+      <span class="title">Improve your front-end skills by building projects</span>
+      <span class="copy">Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</span>
+    </div>
   </div>
 </body>
 
